Added ::backdrop styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 
 <Doctype html>
 <html>
+<head>
+  <style>
+    ::backdrop {
+      background: linear-gradient(red, blue);
+      opacity: 40%;
+    }
+    * {
+      position: absolute;
+      margin: auto;
+    }
+  </style>
+</head>
 <body>
 <button>Open Dialog</button>
 <dialog>
